<resources>
    <string name="app_name">BioWiki</string>
    <string name="email">Email</string>
    <string name="password_hint">Password</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="biowiki">BioWiki</string>
    <string name="name">Name</string>
    <string name="already_register">Already Register ?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
