<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray1"
    tools:context=".register">

    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/logo"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="20dp"
        android:id="@+id/logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/biowiki"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/green"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/logo"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:padding="10dp"
        android:background="@drawable/background_edt"
        android:id="@+id/edtName"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/edtName"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:padding="10dp"
        android:background="@drawable/background_edt"
        android:id="@+id/edtEmail"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/edtEmail"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:padding="10dp"
        android:background="@drawable/background_edt"
        android:id="@+id/edtPass"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/edtPass"
        android:layout_marginTop="30dp"
        android:text="@string/register"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:id="@+id/btnReg"
        android:textSize="20sp"
        android:background="@color/skyDark"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/alReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnReg"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="17sp"
        android:text="@string/already_register"
        android:textStyle="normal|italic" />

</RelativeLayout>