<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray1"
    tools:context=".login">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/city" />

    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/logo"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="90dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:text="@string/biowiki"
        android:textColor="#53ea24"
        android:textSize="25sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/background_edt"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:padding="5dp"
            android:textSize="20sp"
            android:layout_alignParentTop="true"
            android:id="@+id/edtEmail"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="160dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/background_edt"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:ems="10"
            android:padding="5dp"
            android:textSize="20sp"
            android:layout_alignParentTop="true"
            android:id="@+id/edtPass"/>

        <include
            layout="@layout/login_register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtPass"
            android:layout_marginTop="20dp"
            android:layout_alignLeft="@id/edtPass"
            android:layout_alignStart="@id/edtPass"
            android:layout_alignRight="@id/edtPass"
            android:layout_alignEnd="@id/edtPass"
            android:id="@+id/log"/>

        <include
            layout="@layout/or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/log"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:id="@+id/or"/>

        <TextView
            android:id="@+id/txtForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/or"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/forgot_password" />

        <com.google.android.gms.common.SignInButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_below="@+id/txtForgot"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:id="@+id/btnGoogle"/>
    </RelativeLayout>
</RelativeLayout>